2011-10-29  Araki Ken  <arakiken@users.sf.net>

	* ml_screen.c: copy_or_check_region() and reverse_or_restore_region() are
	  rewritten becase chars argument in copy_or_check_region() could be
	  overflown occasionally.

	* x_gc.c: Initial foreground/background colors of GC always equal to
	  those of x_gc_t in x_gc_new().
	
	* vte.c:
	  - Fixed mistakes of macros for vte-2.18 or before.
	  - x_window_update() is called appropriately.
	  - x_color_manager_change_alpha() and x_window_set_bg_color() are called
	    in vte_terminal_realize().

	* vtetypebuiltins.c: vte_pty_flags_get_type() and vte_pty_error_get_type()
	  are added.

	* x_color.c: Alpha blended pixel is set in 32 bit depth in x_load_rgb_xcolor().

	* x_sample(2)_sb_view.c, x_sample_sb_view.h: Black and white pixel are gotten
	  by XAllocColor(), not BlackPixel and WhitePixel macros.

	* x_gc.c: Default values of fg and bg colors are 0xff000000 and 0xffffffff
	  respectively instead of BlackPixel and WhitePixel.

2011-10-23  Araki Ken  <arakiken@users.sf.net>

	* x_picture.[ch]: x_root_pixmap_available() is removed.

	* x_window.c, x_imagelib.c: If depth of root pixmap isn't equal to one of current
	  window, background (translucent) pixmap is not set.

	* README, README.ja, etc/main, etc/main.ja: Updated.

	* ml_pty_ssh.c: Previous commit is canceled and libssh2_channel_setenv_ex()
	  is used instead of libssh2_channel_setenv().

2011-10-22  Araki Ken  <arakiken@users.sf.net>

	* ml_pty_ssh.c: Not *env but kik_str_alloca_dup( *env) is used in
	  overwriting its memory to separate it to key and value.

2011-10-22  Araki Ken  <arakiken@users.sf.net>

	* ml_pty.c: Minor fixes for win32 native.

2011-10-21  Araki Ken  <arakiken@users.sf.net>

	* x_term_manager.c: "version" varaible was freed unjustly in
	  x_term_manager_final() and mlterm@cygwin was prevented from exiting
	  normally. So "version" variable and so on is removed.
	  (Thanks to Iwamoto Kouichi san)
