@@ -32,6 +32,8 @@ Options for configure
     'mlimgloader' program (which is compiled with gdk-pixbuf if
     --with-tools=mlimgloader option is specified) can process images and
     pass them to mlterm.
+    This option is recommended only if you build libvte which depends
+    on gdk-pixbuf anyway.
     (Imlib is not supported since mlterm 3.0.2)
 
   --with-libltdl
@@ -96,6 +98,7 @@ Options for configure
 
   --enable-ibus
     Support iBUS (Intelligent Input Bus) if available.
+    (iBUS 1.4.0 or later is not supported.)
 
   --enable-pty-helper
     Support gnome-pty-helper. (Note that it is impossible to enable
